--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title></title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
 </head>
 <body>
 <div class="column" id="sidebar">
   <div class="column" id="button-wrap"></div>
+  <div class="effect varrius column">
+    <div class="buttons">
+      <a href="#" class="vimeo" title="Join us on Vimeo"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+      <a href="#" class="insta" title="Join us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="#" class="in" title="Join us on Linked In"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    </div>
+  </div>
 </div>
 
 <div class="column" id="main"></div>
