--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="column" id="button-wrap"></div>
   <div class="effect varrius column">
     <div class="buttons">
-      <a href="#" class="vimeo" title="Join us on Vimeo"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+      <a href="#" class="vimeo" title="Join us on Vimeo"><i class="fa fa-youtube" aria-hidden="true"></i></a>
       <a href="https://www.instagram.com/gsiebs/?hl=en" class="insta" title="Join us on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       <a href="#" class="in" title="Join us on Linked In"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
