--- a/film.html
+++ b/film.html
@@ -23,6 +23,6 @@
 </body>
 
 <script type="text/javascript" src="js/navigation.js"></script>
-<script type="text/javascript" src="js/landing.js"></script>
+<!-- <script type="text/javascript" src="js/landing.js"></script> -->
 <script type="text/javascript" src="js/art.js"></script>
 </html>
