--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
     <div class="buttons">
       <a href="https://www.youtube.com/channel/UCgF_axbU-yNY-Y110GX1WxQ" class="vimeo" title="Find me on Youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a>
       <a href="https://www.instagram.com/gsiebs/?hl=en" class="insta" title="Find me on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-      <a href="mailto:Griffinsiebert@hotmail.com" class="in" title="Email Me"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+      <a href="#" class="in" title="Email Me"><i class="fa fa-envelope" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
@@ -23,6 +23,6 @@
 </body>
 
 <script type="text/javascript" src="js/navigation.js"></script>
-<script type="text/javascript" src="js/landing.js"></script>
+<!-- <script type="text/javascript" src="js/landing.js"></script> -->
 <script type="text/javascript" src="js/art.js"></script>
 </html>
