--- a/work.html
+++ b/work.html
@@ -12,9 +12,9 @@
   <div class="column" id="button-wrap"></div>
   <div class="effect varrius column">
     <div class="buttons">
-      <a href="https://www.youtube.com/channel/UCgF_axbU-yNY-Y110GX1WxQ" class="vimeo" title="Find me on Youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-      <a href="https://www.instagram.com/gsiebs/?hl=en" class="insta" title="Find me on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-      <a href="#" class="in" title="Email Me"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+        <a href="https://www.youtube.com/channel/UCgF_axbU-yNY-Y110GX1WxQ" class="vimeo" title="Find me on Youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/gsiebs/?hl=en" class="insta" title="Find me on Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="mailto:Griffinsiebert@hotmail.com" class="in" title="Email Me"><i class="fa fa-envelope" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
