--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="column" id="main"></div>
 </body>
-
+<script type="text/javascript" src="js/variables.js"></script>
 <script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/landing.js"></script>
 <script type="text/javascript" src="js/art.js"></script>
