--- a/work.html
+++ b/work.html
@@ -19,10 +19,11 @@
   </div>
 </div>
 
-<div class="column" id="main"></div>
+<div id="main">
+</div>
 </body>
-
-<script type="text/javascript" src="js/navigation.js"></script>
+<script type="text/javascript" src="js/variables.js"></script>
+<script type="text/javascript" src="js/workNav.js"></script>
 <!-- <script type="text/javascript" src="js/landing.js"></script> -->
 <script type="text/javascript" src="js/art.js"></script>
 </html>
