--- a/about.html
+++ b/about.html
@@ -24,5 +24,5 @@
 <script type="text/javascript" src="js/variables.js"></script>
 <script type="text/javascript" src="js/navigation.js"></script>
 <script type="text/javascript" src="js/about.js"></script>
-<script type="text/javascript" src="js/art.js"></script>
+<!-- <script type="text/javascript" src="js/art.js"></script> -->
 </html>
