--- a/work.html
+++ b/work.html
@@ -25,5 +25,5 @@
 <script type="text/javascript" src="js/variables.js"></script>
 <script type="text/javascript" src="js/workNav.js"></script>
 <!-- <script type="text/javascript" src="js/landing.js"></script> -->
-<script type="text/javascript" src="js/art.js"></script>
+<!-- <script type="text/javascript" src="js/art.js"></script> -->
 </html>
