--- a/film.html
+++ b/film.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="column" id="sidebar">
-  <div class="column" id="button-wrap"></div>
+  <div class="column" id="button-wrap"><a href="index.html"><img class="home-button" src="assets/GRIF_SIGNATURE.png" alt="home"></a></div>
   <div class="effect varrius column">
     <div class="buttons">
       <a href="https://www.youtube.com/channel/UCgF_axbU-yNY-Y110GX1WxQ" class="vimeo" title="Find me on Youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a>
